@@ -5,16 +5,17 @@ WORKDIR /app
 COPY . .
 
 RUN mvn clean package -DskipTests \
-    && cp target/oci-helper-1.1.7.jar /app/oci-helper.jar
+    && cp target/oci-helper-1.1.8.jar /app/oci-helper.jar
 
-FROM eclipse-temurin:17-jre-ubi9-minimal
+FROM eclipse-temurin:17-jre-jammy
 
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends tzdata \
-    && ln -fs /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
-    && echo "Asia/Shanghai" > /etc/timezone \
-    && mkdir -p /app/oci-helper/keys && touch /app/oci-helper/oci-helper.db \
-    && apt-get clean && rm -rf /var/lib/apt/lists/*
+RUN locale-gen zh_CN.UTF-8 && \
+    update-locale LANG=zh_CN.UTF-8 && \
+    ln -fs /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
+    echo "Asia/Shanghai" > /etc/timezone
+
+ENV LANG=zh_CN.UTF-8 \
+    LC_ALL=zh_CN.UTF-8
 
 WORKDIR /app/oci-helper
 
@@ -22,4 +23,4 @@ COPY --from=builder /app/oci-helper.jar .
 
 EXPOSE 8818
 
-CMD ["sh", "-c", "java -jar oci-helper.jar | tee /var/log/oci-helper.log"]
+CMD ["sh", "-c", "java --add-opens java.base/java.lang.invoke=ALL-UNNAMED -jar oci-helper.jar | tee /var/log/oci-helper.log"]
